Cambiamos la animacion y la contuvimos en las imagenes del index.html .complemento equipo

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
     <section class="equipo">
         <h2 class="equipo__titulo--grande">¡Conozca al equipo docente!</h2>
         <div class="equipo__contenedor">
-            <div class="equipo__miembro" data-aos="fade-in" data-aos-delay="100" data-aos-once="true">
+            <div class="equipo__miembro" data-aos="fade-left" data-aos-delay="100" data-aos-once="true">
                 <img class="equipo__img equipo__img--azul" src="./img/miembro-1.jpg" alt="Miembro del equipo">
                 <h3 class="equipo__titulo">Miembro 1</h3>
                 <p class="equipo__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
             </div>
-            <div class="equipo__miembro" data-aos="fade-in" data-aos-delay="120" data-aos-once="true">
+            <div class="equipo__miembro" data-aos="fade-left" data-aos-delay="120" data-aos-once="true">
                 <img class="equipo__img equipo__img--rojo" src="./img/miembro-2.jpg" alt="Miembro del equipo">
                 <h3 class="equipo__titulo">Miembro 2</h3>
                 <p class="equipo__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
             </div>
-            <div class="equipo__miembro" data-aos="fade-in" data-aos-delay="140" data-aos-once="true">
+            <div class="equipo__miembro" data-aos="fade-left" data-aos-delay="140" data-aos-once="true">
                 <img class="equipo__img equipo__img--rosa" src="./img/miembro-3.jpg" alt="Miembro del equipo">
                 <h3 class="equipo__titulo">Miembro 3</h3>
                 <p class="equipo__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
             </div>
-            <div class="equipo__miembro" data-aos="fade-in" data-aos-delay="160" data-aos-once="true">
+            <div class="equipo__miembro" data-aos="fade-left" data-aos-delay="160" data-aos-once="true">
                 <img class="equipo__img equipo__img--gris" src="./img/miembro-4.jpg" alt="Miembro del equipo">
                 <h3 class="equipo__titulo">Miembro 4</h3>
                 <p class="equipo__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
