Commit posterior al after del 23/12

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                 <h3 class="equipo__titulo">Miembro 2</h3>
                 <p class="equipo__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
             </div>
-            <div class="equipo__miembro" data-aos="fade-left" data-aos-delay="140" data-aos-once="true">
+            <div class="equipo__miembro" data-aos="fade-leftm" data-aos-delay="140" data-aos-once="true">
                 <img class="equipo__img equipo__img--rosa" src="./img/miembro-3.jpg" alt="Miembro del equipo">
                 <h3 class="equipo__titulo">Miembro 3</h3>
-                <p class="equipo__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
+                <p class="equipo__parrafo">Lorem ipsu dolor sit amet consectetur adipisicing elit. Quasi dolore, inventore saepe possimus ullam dicta dolores veniam nihil at accusamus.</p>
             </div>
             <div class="equipo__miembro" data-aos="fade-left" data-aos-delay="160" data-aos-once="true">
                 <img class="equipo__img equipo__img--gris" src="./img/miembro-4.jpg" alt="Miembro del equipo">
